--- a/docs/.vitepress/plugins/demo-preview/component/container/ant-design-ui/ant-design.scss
+++ b/docs/.vitepress/plugins/demo-preview/component/container/ant-design-ui/ant-design.scss
@@ -1,4 +1,5 @@
-@import '../../styles/various.scss';
+@use '../../styles/various.scss' as *;
+
 
 $componentPrefix: 'ant-design';
 $containerPrefix: #{$defaultPrefix}__#{$componentPrefix};
