--- a/docs/.vitepress/plugins/demo-preview/component/container/naive-ui/naive-ui.scss
+++ b/docs/.vitepress/plugins/demo-preview/component/container/naive-ui/naive-ui.scss
@@ -1,4 +1,4 @@
-@import '../../styles/various.scss';
+@use '../../styles/various.scss' as *;
 
 $componentPrefix: 'naive-ui';
 $containerPrefix: #{$defaultPrefix}__#{$componentPrefix};
