--- a/src/swy-ui/theme-chalk/tag.scss
+++ b/src/swy-ui/theme-chalk/tag.scss
@@ -30,7 +30,7 @@ $tag-icon-span-gap: map.merge(
   @return $list;
 }
 
-// false mean --el-color-white
+// false mean --swy-color-white
 @mixin genTheme($backgroundColorWeight, $borderColorWeight, $hoverColorWeight) {
   @include css-var-from-global(('tag', 'bg-color'), returnVarList($backgroundColorWeight));
   @include css-var-from-global(('tag', 'border-color'), returnVarList($borderColorWeight));
