--- a/src/swy-ui/theme-chalk/src/common/transition.scss
+++ b/src/swy-ui/theme-chalk/src/common/transition.scss
@@ -1,16 +1,19 @@
-@use '../mixins/config' as *;
-@use '../mixins/mixins' as *;
+@use '../mixins/config' as *; // 导入配置，包含命名空间等
+@use '../mixins/mixins' as *; // 导入 BEM 命名约定的 mixin
 
+// 线性淡入淡出过渡效果
 .fade-in-linear-enter-active,
 .fade-in-linear-leave-active {
   transition: getCssVar('transition-fade', 'linear');
 }
 
+// 线性淡入淡出过渡效果的起始状态
 .fade-in-linear-enter-from,
 .fade-in-linear-leave-to {
   opacity: 0;
 }
 
+// 线性淡入淡出过渡效果的结束状态
 .#{$namespace}-fade-in-linear-enter-active,
 .#{$namespace}-fade-in-linear-leave-active {
   transition: getCssVar('transition-fade', 'linear');
@@ -20,6 +23,7 @@
   opacity: 0;
 }
 
+// 线性淡入过渡效果
 .#{$namespace}-fade-in-enter-active,
 .#{$namespace}-fade-in-leave-active {
   transition: all getCssVar('transition-duration') cubic-bezier(0.55, 0, 0.1, 1);
@@ -29,6 +33,7 @@
   opacity: 0;
 }
 
+// 缩放过渡效果 - 居中
 .#{$namespace}-zoom-in-center-enter-active,
 .#{$namespace}-zoom-in-center-leave-active {
   transition: all getCssVar('transition-duration') cubic-bezier(0.55, 0, 0.1, 1);
@@ -39,6 +44,7 @@
   transform: scaleX(0);
 }
 
+// 缩放过渡效果 - 顶部
 .#{$namespace}-zoom-in-top-enter-active,
 .#{$namespace}-zoom-in-top-leave-active {
   opacity: 1;
@@ -56,6 +62,7 @@
   transform: scaleY(0);
 }
 
+// 缩放过渡效果 - 底部
 .#{$namespace}-zoom-in-bottom-enter-active,
 .#{$namespace}-zoom-in-bottom-leave-active {
   opacity: 1;
@@ -69,6 +76,7 @@
   transform: scaleY(0);
 }
 
+// 缩放过渡效果 - 左侧
 .#{$namespace}-zoom-in-left-enter-active,
 .#{$namespace}-zoom-in-left-leave-active {
   opacity: 1;
@@ -82,6 +90,7 @@
   transform: scale(0.45, 0.45);
 }
 
+// 折叠过渡效果
 .collapse-transition {
   transition:
     getCssVar('transition-duration') height ease-in-out,
@@ -89,6 +98,7 @@
     getCssVar('transition-duration') padding-bottom ease-in-out;
 }
 
+// 折叠过渡效果
 .#{$namespace}-collapse-transition-leave-active,
 .#{$namespace}-collapse-transition-enter-active {
   transition:
@@ -97,6 +107,7 @@
     getCssVar('transition-duration') padding-bottom ease-in-out;
 }
 
+// 横向折叠过渡效果
 .horizontal-collapse-transition {
   transition:
     getCssVar('transition-duration') width ease-in-out,
@@ -104,21 +115,25 @@
     getCssVar('transition-duration') padding-right ease-in-out;
 }
 
+// 列表过渡效果
 .#{$namespace}-list-enter-active,
 .#{$namespace}-list-leave-active {
   transition: all 1s;
 }
 
+// 列表过渡效果的起始状态
 .#{$namespace}-list-enter-from,
 .#{$namespace}-list-leave-to {
   opacity: 0;
   transform: translateY(-30px);
 }
 
+// 列表过渡效果的结束状态
 .#{$namespace}-list-leave-active {
   position: absolute !important;
 }
 
+// 透明度过渡效果
 .#{$namespace}-opacity-transition {
   transition: opacity getCssVar('transition-duration') cubic-bezier(0.55, 0, 0.1, 1);
 }
