--- a/src/swy-ui/theme-chalk/src/common/popup.scss
+++ b/src/swy-ui/theme-chalk/src/common/popup.scss
@@ -1,19 +1,23 @@
-@use './var' as *;
-@use '../mixins/mixins' as *;
-@use '../mixins/var' as *;
+@use './var' as *; // 导入变量文件
+@use '../mixins/mixins' as *; // 导入 BEM 命名约定的 mixin
+@use '../mixins/var' as *; // 导入 CSS 变量相关工具
 
+// 在根元素上设置弹窗组件相关的 CSS 变量
 :root {
   @include set-component-css-var('popup', $popup);
 }
 
+// 模态框进入动画，使用 v-modal-in 关键帧动画
 .v-modal-enter {
   animation: v-modal-in getCssVar('transition-duration-fast') ease;
 }
 
+// 模态框离开动画，使用 v-modal-out 关键帧动画
 .v-modal-leave {
   animation: v-modal-out getCssVar('transition-duration-fast') ease forwards;
 }
 
+// 模态框进入关键帧动画
 @keyframes v-modal-in {
   0% {
     opacity: 0;
@@ -22,6 +26,7 @@
   }
 }
 
+// 模态框离开关键帧动画
 @keyframes v-modal-out {
   0% {
   }
@@ -30,6 +35,7 @@
   }
 }
 
+// 模态框样式
 .v-modal {
   position: fixed;
   left: 0;
@@ -40,6 +46,7 @@
   background: getCssVar('popup-modal-bg-color');
 }
 
+// 当父元素有 popup-parent--hidden 类时，设置 overflow: hidden 防止页面滚动
 @include b(popup-parent) {
   @include m(hidden) {
     overflow: hidden;
