--- a/src/swy-ui/theme-chalk/src/step.scss
+++ b/src/swy-ui/theme-chalk/src/step.scss
@@ -27,13 +27,13 @@
     width: 100%;
 
     @include when(process) {
-      color: getCssVar('text-color', 'primary');
-      border-color: getCssVar('text-color', 'primary');
+      color: getCssVar('color-primary');
+      border-color: getCssVar('color-primary');
     }
 
     @include when(wait) {
-      color: getCssVar('text-color', 'placeholder');
-      border-color: getCssVar('text-color', 'placeholder');
+      color: getCssVar('fill-color', 'dark');
+      border-color: getCssVar('fill-color', 'dark');
     }
 
     @include when(success) {
@@ -62,17 +62,22 @@
     height: 24px;
     font-size: 14px;
     box-sizing: border-box;
-    background: getCssVar('bg-color');
+    background: getCssVar('fill-color', 'blank');
     transition: 0.15s ease-out;
+    border-radius: 50%;
+    border: 2px solid;
+    border-color: inherit;
 
     @include when(text) {
       border-radius: 50%;
       border: 2px solid;
-      border-color: currentColor;
+      border-color: inherit;
     }
 
     @include when(icon) {
-      width: 40px;
+      width: 24px;
+      height: 24px;
+      font-size: 18px;
     }
   }
 
@@ -80,32 +85,35 @@
     display: inline-block;
     user-select: none;
     text-align: center;
-    font-weight: bold;
+    font-weight: 700;
     line-height: 1;
     color: inherit;
 
     &[class*='#{$namespace}-icon']:not(.is-status) {
-      font-size: 25px;
+      font-size: 18px;
       font-weight: normal;
     }
 
     // 组件自身表示状态的图标
     @include when(status) {
       transform: translateY(1px);
+      font-size: 14px;
+      font-weight: bold;
     }
   }
 
   @include e(line) {
     position: absolute;
-    border-color: currentColor;
-    background-color: getCssVar('text-color', 'placeholder');
+    border-color: inherit;
+    background-color: getCssVar('fill-color', 'dark');
   }
 
   @include e(line-inner) {
     display: block;
-    border-width: 1px;
+    border-width: 0;
     border-style: solid;
-    border-color: currentColor;
+    border-color: inherit;
+    background-color: getCssVar('color-primary');
     transition: 0.15s ease-out;
     box-sizing: border-box;
     width: 0;
@@ -122,7 +130,7 @@
     line-height: 38px;
 
     @include when(process) {
-      font-weight: bold;
+      font-weight: 700;
       color: getCssVar('text-color', 'primary');
     }
 
@@ -131,15 +139,15 @@
     }
 
     @include when(success) {
-      color: getCssVar('color-success');
+      color: getCssVar('text-color', 'primary');
     }
 
     @include when(error) {
-      color: getCssVar('color-danger');
+      color: getCssVar('text-color', 'primary');
     }
 
     @include when(finish) {
-      color: getCssVar('color-primary');
+      color: getCssVar('text-color', 'primary');
     }
   }
 
@@ -151,7 +159,7 @@
     font-weight: normal;
 
     @include when(process) {
-      color: getCssVar('text-color', 'primary');
+      color: getCssVar('text-color', 'regular');
     }
 
     @include when(wait) {
@@ -159,15 +167,15 @@
     }
 
     @include when(success) {
-      color: getCssVar('color-success');
+      color: getCssVar('text-color', 'regular');
     }
 
     @include when(error) {
-      color: getCssVar('color-danger');
+      color: getCssVar('text-color', 'regular');
     }
 
     @include when(finish) {
-      color: getCssVar('color-primary');
+      color: getCssVar('text-color', 'regular');
     }
   }
 
@@ -179,6 +187,11 @@
       top: 11px;
       left: 0;
       right: 0;
+    }
+
+    @include e(line-inner) {
+      height: 100%;
+      transition: all 0.15s ease-out;
     }
   }
 
@@ -205,6 +218,11 @@
       top: 0;
       bottom: 0;
       left: 11px;
+    }
+
+    @include e(line-inner) {
+      width: 100%;
+      transition: all 0.15s ease-out;
     }
 
     @include e(icon) {
