--- a/src/swy-ui/theme-chalk/src/anchor.scss
+++ b/src/swy-ui/theme-chalk/src/anchor.scss
@@ -1,93 +1,28 @@
-@use 'sass:map';
-
 @use 'mixins/mixins' as *;
-@use 'mixins/var' as *;
 @use 'common/var' as *;
 
 @include b(anchor) {
-  @include set-component-css-var('anchor', $anchor);
-
   position: relative;
-  background-color: getCssVar('anchor-bg-color');
+  padding: 8px 0;
 
   @include e(marker) {
     position: absolute;
-    background-color: getCssVar('anchor-marker-bg-color');
-    border-radius: 4px;
-    opacity: 0;
-    z-index: 0;
+    background-color: getCssVar('color-primary');
+    transition: all 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
+    z-index: 1;
   }
 
-  &.#{$namespace}-anchor--vertical {
-    @include e(marker) {
-      width: 4px;
-      height: 14px;
-      top: 8px;
-      left: 0;
-      transition:
-        top 0.25s ease-in-out,
-        opacity 0.25s;
-    }
-
-    @include e(list) {
-      padding-left: getCssVar('anchor-padding-indent');
-    }
-
-    &.#{$namespace}-anchor--underline {
-      &::before {
-        position: absolute;
-        left: 0;
-        width: 2px;
-        height: 100%;
-        background-color: rgba(5, 5, 5, 0.06);
-        content: '';
-      }
-
-      @include e(marker) {
-        width: 2px;
-        border-radius: unset;
-      }
-    }
+  @include e(line) {
+    position: absolute;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    width: 2px;
+    background-color: getCssVar('border-color-light');
   }
 
-  &.#{$namespace}-anchor--horizontal {
-    @include e(marker) {
-      height: 2px;
-      width: 20px;
-      bottom: 0;
-      transition:
-        left 0.25s ease-in-out,
-        opacity 0.25s,
-        width 0.25s;
-    }
-
-    @include e(list) {
-      display: flex;
-      padding-bottom: 4px;
-
-      @include e(item) {
-        padding-left: 16px;
-
-        &:first-child {
-          padding-left: 0;
-        }
-      }
-    }
-
-    &.#{$namespace}-anchor--underline {
-      &::before {
-        position: absolute;
-        bottom: 0;
-        width: 100%;
-        height: 2px;
-        background-color: rgba(5, 5, 5, 0.06);
-        content: '';
-      }
-
-      @include e(marker) {
-        height: 2px;
-        border-radius: unset;
-      }
-    }
+  @include e(list) {
+    position: relative;
+    padding-left: 12px;
   }
 }
